--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/subscribers
 spring.datasource.username=postgres
-spring.datasource.password=jhoana
+spring.datasource.password=minerva
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+
+
+server port: 8080
