--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/subscribers
+spring.datasource.url=jdbc:postgresql://localhost:5432/getfiteasy
 spring.datasource.username=postgres
 spring.datasource.password=minerva
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -6,7 +6,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
 
-
-server port: 8080
+server.port=8080
